fixed alignment of grids

--- a/app/assets/stylesheets/island_collections.scss
+++ b/app/assets/stylesheets/island_collections.scss
@@ -31,7 +31,7 @@ section.collection-items {
 
 section.collection-items div {
 	justify-self: center;
-	align-self: center;
+	align-self: start;
 	position: relative;
 }
 
